# pramana-rust-sdk

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
benches/: gauss_bench.rs
src/: error.rs  gauss.rs  gint.rs  lib.rs  number_theory.rs  pramana_id.rs  pramana_interface.rs  pramana_linkable.rs  pramana_object.rs  pramana_particular.rs  pramana_role.rs
tests/: integration_tests.rs
